monitoring cost correction

--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -32,7 +32,7 @@
 
 \title[Financial Frictions \& Cleansing Effects]{Financial Frictions and the Cleansing Effects of Recessions}
 \author[Riccardo Dal Cero]{Dissertation by: Riccardo Dal Cero \\{\small Supervisor: Domenico Delli Gatti} }
-\date[09/04/24]{09/04/24 \\\vspace{0.5cm}{\small A.Y. 2022/2023}}
+\date[09/04/24]{ A.Y. 2022/2023}
 \logo{\includegraphics[scale=0.2]{logo.png}}
 \institute{Università Cattolica del Sacro Cuore \\ Campus of Milan}
 \setbeamertemplate{footline}{
@@ -76,8 +76,8 @@
         Hammour, 1993)
         \item However, this pattern shifted during the Great Recession (as identified by Foster, Grim, \& Haltiwanger,
         2016): the intensity of reallocation 
-        fell rather than rose and the reallocation that did occur was less productivity-enhancing than in the prior
-        recessions, (Osotimehin \& Pappada (2017)) attributes to the \textbf{financial frictions}.
+        fell rather than rose, and the reallocation that did occur was less productivity-enhancing than in the prior
+        recessions.
     \end{itemize}
 \end{frame}
 
@@ -87,11 +87,11 @@
         \centering
         \textbf{Predicted Contribution of Reallocation to Aggregate (Industry-Level) Productivity}\par\medskip
         \includegraphics[scale=0.24]{GreatRecession.png}        
-        \caption{The graph illustrates industry productivity gains from reallocation, measured in log
-        points. "Normal" indicates productivity growth in the absence of unemployment fluctuations. "Mild" and "Sharp"
-        contractions correspond to 1\% and 3\% rises in state unemployment, respectively. "GR" denotes the period of the
-        Great Recession (2007-2009), as analyzed by Foster et al. (2016). 
-}
+%         \caption{The graph illustrates industry productivity gains from reallocation, measured in log
+%         points. "Normal" indicates productivity growth in the absence of unemployment fluctuations. "Mild" and "Sharp"
+%         contractions correspond to 1\% and 3\% rises in state unemployment, respectively. "GR" denotes the period of the
+%         Great Recession (2007-2009), as analyzed by Foster et al. (2016). 
+% }
         \label{fig:enter-label}
     \end{figure}
 \end{frame}
@@ -167,8 +167,8 @@
             }
         ]
         {-0.5*3^0.8 + 0.1*3 + 1.1*x + 0.8};
-        % Draw a red dot at coordinates (2.5,2.5)
-        \node[draw, circle, fill=green, inner sep=2pt] at (axis cs:1.1,1.1) {};
+        % % Draw a red dot at coordinates (2.5,2.5)
+        % \node[draw, circle, fill=green, inner sep=2pt] at (axis cs:1.1,1.1) {};
 
         \end{axis}
     \end{tikzpicture}
@@ -177,7 +177,7 @@
 \begin{frame}{Financial frictions}
     There are two types of financial frictions are included:
     \begin{enumerate}
-        \item \textbf{Monitoring costs} of the financial intermediaries (\(\mu\)) on the participation constraint:
+        \item \textbf{Monitoring costs} of the financial intermediaries (\(1-\mu\)) on the participation constraint:
             \begin{equation}
                 R_t=\frac{R_f}{p}  -\frac{ 1-p }{ p }\frac{\mu f{(k_{t})}}{b_t} \label{c2}
         \end{equation}
