--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -59,134 +59,60 @@
 }
 \begin{document}
 \frame{\titlepage}
+
 \begin{frame}
-    \frametitle{A historical hint about recessions}
-    \begin{figure}
-    \centering
-    \includegraphics[scale=0.27]{fredgraph.png}
-    \caption{Annual US GDP growth rates from 1966 to 2022}
-    \end{figure}
-\end{frame}
-\begin{frame}
-    \frametitle{The Cleansing Effect of Recessions}
+    \frametitle{Motivations}
     \begin{itemize}
         \item Economic downturns are associated with increased patterns of reallocation.
-        \item Literature on the Cleansing Effect suggests this is a productivity-enhancing phenomenon: during economic
-        downturns, less productive units are eliminated, leaving only the most productive ones to survive (Caballero \&
+        \item Literature on the Cleansing Effect suggests that these patterns are a productivity-enhancing phenomenon (Caballero \&
         Hammour, 1993)
-        \item However, this pattern shifted during the Great Recession (as identified by Foster, Grim, \& Haltiwanger,
+        \item This pattern shifted during the Great Recession (as identified by Foster, Grim, \& Haltiwanger,
         2016): the intensity of reallocation 
-        fell rather than rose, and the reallocation that did occur was less productivity-enhancing than in the prior
-        recessions.
+        fell rather than rise
     \end{itemize}
 \end{frame}
 
-\begin{frame}
-    \begin{figure}
-        
-        \centering
-        \textbf{Predicted Contribution of Reallocation to Aggregate (Industry-Level) Productivity}\par\medskip
-        \includegraphics[scale=0.24]{GreatRecession.png}        
-%         \caption{The graph illustrates industry productivity gains from reallocation, measured in log
-%         points. "Normal" indicates productivity growth in the absence of unemployment fluctuations. "Mild" and "Sharp"
-%         contractions correspond to 1\% and 3\% rises in state unemployment, respectively. "GR" denotes the period of the
-%         Great Recession (2007-2009), as analyzed by Foster et al. (2016). 
-% }
-        \label{fig:enter-label}
-    \end{figure}
-\end{frame}
+
 \begin{frame}
     \frametitle{Research Questions}
     \begin{enumerate}
         \item How do \textbf{financial frictions} influence firms' decisions on optimal \textit{capital} and \textit{dividend} paths?
         \begin{itemize}
-            \item By developing a \textbf{theoretical model} incorporating financial frictions to derive a \textit{closed-form solution} for the firm's optimization problem.
+            \item By developing a \textbf{theoretical model} incorporating financial frictions
         \end{itemize}
         \item What are the \textit{aggregate-level} effects of financial frictions on the \textbf{cleansing effect}?
         \begin{itemize}
-            \item Employing Monte Carlo simulations to investigate the impact of financial frictions within an economy with \textit{heterogeneous firms}.
+            \item Employing Monte Carlo simulations to investigate the impact of financial frictions
         \end{itemize}
     \end{enumerate}
 \end{frame}
 \section{The firm's problem}
 \begin{frame}
-\begin{block}{Flow of fund costraints}
+    \frametitle{Flow of fund constraints and financial frictions}
+The flow of funds constraint is:
 
-\begin{equation}
-    k_{t+1}=k_{t}(1-\delta)- R b_{t} - d_t + f{(k_{t})}+b_{t+1} \label{c1}
-\end{equation}
-\end{block}
-    \begin{figure}
-    \centering
-    \begin{tikzpicture}
-        \begin{axis}[
-            axis lines=left,
-            xlabel=\(b_t\),
-            ylabel={\(b_{t+1}\)},
-            ymin=0,
-            xmin=0,
-        ]
-        % Below the black line is defined
-        \addplot [
-            domain=0:5, 
-            samples=100, 
-            color=black,
-            dotted,
-        ]
-        {x};
-        % Horizontal line at y=2.5
-        \draw [dotted, color=black] (axis cs:0,2.5) -- (axis cs:2.5,2.5);
-        
-        % Vertical line at x=2.5
-        \draw [dotted, color=black] (axis cs:2.5,0) -- (axis cs:2.5,2.5);
-        
-        % Draw a red dot at coordinates (2.5,2.5)
-        \node[draw, circle, fill=red, inner sep=2pt] at (axis cs:2.5,2.5) {};
-        
-        % Horizontal line at y=2.5
-        \draw [dotted, color=black] (axis cs:0,1.1) -- (axis cs:1.1,1.1);
-        
-        % Vertical line at x=2.5
-        \draw [dotted, color=black] (axis cs:1.1,0) -- (axis cs:1.1,1.1);
-        
-        
-        
-        % Here the blue curve is defined with arrows
-        \addplot [
-            domain=0:5, 
-            samples=100, 
-            color=blue,
-            postaction={
-                decorate,
-                decoration={
-                    markings,
-                    mark=at position 0.1 with {\arrow{<}},
-                    %mark=at position 0.5 with {\arrow{>}},
-                    mark=at position 0.3 with {\arrow{>}},
-                }
-            }
-        ]
-        {-0.5*3^0.8 + 0.1*3 + 1.1*x + 0.8};
-        % % Draw a red dot at coordinates (2.5,2.5)
-        % \node[draw, circle, fill=green, inner sep=2pt] at (axis cs:1.1,1.1) {};
+    \begin{equation}
+        k_{t+1}=k_{t}(1-\delta)- R b_{t} - d_t + f{(k_{t})}+b_{t+1} \label{c1}
+    \end{equation}
 
-        \end{axis}
-    \end{tikzpicture}
-    \end{figure}
-\end{frame}
-\begin{frame}{Financial frictions}
-    There are two types of financial frictions are included:
-    \begin{enumerate}
-        \item \textbf{Monitoring costs} of the financial intermediaries (\(1-\mu\)) on the participation constraint:
+Two types of financial frictions are included:
+\begin{enumerate}
+    \item \textbf{Monitoring costs} of the financial intermediaries (\(1-\mu\)) on the participation constraint:
+
             \begin{equation}
                 R_t=\frac{R_f}{p}  -\frac{ 1-p }{ p }\frac{\mu f{(k_{t})}}{b_t} \label{c2}
-        \end{equation}
-        \item \textbf{Financing constraint}:
+            \end{equation}
+
+    \item \textbf{Financing constraint}:
+
         \begin{equation}
-            b_t = l \cdot k_t \quad 0<l<1 \label{c3}
+            b_t = l \cdot k_t  \label{c3}
         \end{equation}
-    \end{enumerate}
+ 
+\end{enumerate}
+
 \end{frame}
+
 \begin{frame}{The firm's inter-temporal problem}
      The firm's objective is to maximize:
 
@@ -195,8 +121,8 @@
 \]
 
 subject to: (\ref{c1}),(\ref{c2}),(\ref{c3}).
-Using the Lagrangian function, we get:
-\begin{block}{Euler equations for divideds}
+From the FOCs, we get:
+\begin{block}{Euler equations for dividends}
     \begin{equation}
         U^{\prime}{(d_{t})}=\frac{\beta}{\left(1-l\right)} U^{\prime}{(d_{t+1})}\left[ f^{\prime}{(k_{t})}\frac{p + \mu - \mu p}{p} + \frac{p - \delta p - R_f l}{p} \right]
     \end{equation}
@@ -310,7 +236,7 @@ The \textit{policy function} is:
             title={Difference in \(K\): exit vs noexit},
             xlabel={Step},
             xmin=1, ymin=0,
-            ylabel={K},
+            ylabel={Difference in \(\ln{k}\)},
             legend pos=north west,
             ymajorgrids=true,
             grid style=dashed,
@@ -364,6 +290,9 @@ The \textit{policy function} is:
     \frametitle{Final Remarks}
     
     \begin{itemize}
+        \setlength\itemsep{1em}
+        \setlength\topsep{0pt}
+        \setlength\parsep{0pt}
         \item Incorporating monitoring costs and financial constraints into the model reveals a \textbf{reduction} in firms' steady-state \textit{capital} and \textit{dividends}.
         \item The impact of \textbf{fixed leverage} on capital varies and is dependent on the specific levels of capital and leverage.
         \item Monte Carlo simulations suggest that such financial frictions could \textbf{dampen} the cleansing effects traditionally observed in recessions.
